--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LabWorks">
-        <activity android:name=".lab2.Lab2Question1">
+        <activity android:name=".lab2.Lab2Question2Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".lab2.Lab2Question1Activity" />
         <activity android:name=".lab1.Lab1Question5" />
         <activity android:name=".lab1.Lab1Question4Activity" />
         <activity android:name=".lab1.Lab1Question3Activity" />
